--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ a{
 }
 .section-heading {
 	color: #333;
-	font-weight: bold; 
+	font-weight: bold;
 	font-size: 30px;
 }
 .section-text {
@@ -571,15 +571,15 @@ a{
   border-color: #e94b35 !important;
 }
 
-/* -------------------------------- 
+/* --------------------------------
 
 Custom icons
 
 -------------------------------- */
 .
-/* -------------------------------- 
+/* --------------------------------
 
-FLoating labels 
+FLoating labels
 
 -------------------------------- */
 .floating-labels div {
@@ -659,4 +659,32 @@ FLoating labels
 .panel-body{
 	width: 93%;
 	margin-left: 50px;
+}
+
+.button {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 5px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+    cursor: pointer;
+}
+
+.button1 {
+    background-color: white;
+    color: black;
+    border: 2px solid #f44336;
+    margin-top: 10px;
+
+}
+
+.button1:hover {
+    background-color: #f44336;
+    color: white;
 }
