--- a/css/style.css
+++ b/css/style.css
@@ -269,7 +269,7 @@ a{
 		color: #db0a5b;
 	}
 	.active{
-		color: #db0a5b;
+		color: #ef7b1c;
 	}
 /*	.navbar-inverse .navbar-nav>li>a.active{
 		color: #db0a5b;
