--- a/css/style.css
+++ b/css/style.css
@@ -268,8 +268,8 @@ a{
 	.menu-item:hover {
 		color: #db0a5b;
 	}
-	.active{
-		color: #ef7b1c;
+  .active{
+		color: #ffffff;
 	}
 /*	.navbar-inverse .navbar-nav>li>a.active{
 		color: #db0a5b;
@@ -677,12 +677,12 @@ FLoating labels
 .button1 {
     background-color: white;
     color: black;
-    border: 2px solid #f44336;
+    border: 2px solid #f36f21;
     margin-top: 8px;
 
 }
 
 .button1:hover {
-    background-color: #f44336;
+    background-color: #f36f21;
     color: white;
 }
