--- a/css/style.css
+++ b/css/style.css
@@ -688,3 +688,13 @@ FLoating labels
     background-color: #f36f21;
     color: white;
 }
+
+.error{
+height: 200px;
+width: 100%;
+position: fixed;
+top: 50%;
+left: 50%;
+margin-top: -100px;
+margin-left: -150px;
+}
